@@ -1,5 +1,10 @@
 2004-07-18    <tino@firebird.03.softkill.net>
 
+	* sockbuf.h (tino_sockbuf_process): started to implement
+
+	* sock.h (tino_sock_select): Exceptions added and processing
+	optimized a little bit.
+
 	* sock.h (tino_sock_udp): added (not ready yet)
 
 2004-07-06    <tino@firebird.03.softkill.net>
